--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
 @import "tailwindcss";
 
+html {
+  overflow-y: scroll;
+}
+
 html, body {
     overflow-x: hidden;
-    width: 100vw;
+    width: 100%;
   }
   
 
